Rewriting in Django

--- a/quiz/templates/quiz/answers.html
+++ b/quiz/templates/quiz/answers.html
@@ -1,7 +1,6 @@
-{% extends "base.html" %}
+{% extends "quiz/base.html" %}
 {% block title %}Answers{% endblock %}
 
-{{ super() }}
 {% block content %}
 <div>
     <div>
