--- a/quiz/templates/quiz/question.html
+++ b/quiz/templates/quiz/question.html
@@ -6,6 +6,7 @@
 <div>
     <h2>Question {{ question.id }}</h2>
     <p>{{ question.text }}</p>
+    <div class="status">{{ status }}</div>
 
     <a href="{{ answers_url }}" >Answers</a>
 </div>
