Display status, to be used for testing

--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -14,6 +14,8 @@
 </header>
 
 <main>
+    <a href="{% url 'status_detail' 0 %}">View Status</a>
+
     {% block content %}{% endblock %}
 </main>
 
