--- a/quiz/templates/quiz/answers.html
+++ b/quiz/templates/quiz/answers.html
@@ -13,8 +13,8 @@
                 <li>
                     <button type="submit"
                             name="answer"
-                            value="{{ forloop.counter0 }}"
-                            formaction="{% url 'submit_answer' quiz_id=quiz_id question_id=question_id answer_id=forloop.counter0 %}">
+                            value="{{ answer.id }}"
+                            formaction="{% url 'submit_answer' quiz_id=quiz_id question_id=question_id answer_id=answer.id %}">
                         {{ answer.text }} ({{answer.is_correct}})
                     </button>
 
