--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{% block title %}{% endblock %} - My Website</title>
+    <title>Phrase craze - {% block title %}{% endblock %}</title>
     {% block head %}
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
